package Struct.Dec;

public interface Decorator {

    void writeData(String data);
    String readData();
}
