@startuml

title __DEC's Class Diagram__\n

  namespace java {
    namespace Struct {
      interface Struct.Dec.Decorator {
          {abstract} + readData()
          {abstract} + writeData()
      }
    }
  }

  namespace java {
    namespace Struct {
      namespace Dec {
        class Struct.Dec.CompressionDecorator {
            - compLevel : int
            + CompressionDecorator()
            + getCompressionLevel()
            + readData()
            + setCompressionLevel()
            + writeData()
            - compress()
            - decompress()
        }
      }
    }
  }
  

  namespace java {
    namespace Struct {
      namespace Dec {
        class Struct.Dec.DataSourceDecorator {
            + readData()
            + writeData()
            ~ DataSourceDecorator()
        }
      }
    }
  }
  

  namespace java {
    namespace Struct {
      namespace Dec {
        class Struct.Dec.EncryptDecorator {
            + EncryptDecorator()
            + readData()
            + writeData()
            - decode()
            - encode()
        }
      }
    }
  }
  

  namespace java {
    namespace Struct {
      namespace Dec {
        class Struct.Dec.FileDataSource {
            - FileName : String
            + FileDataSource()
            + readData()
            + writeData()
        }
      }
    }
  }
  

  Struct.Dec.CompressionDecorator -up-|> Struct.Dec.DataSourceDecorator
  Struct.Dec.DataSourceDecorator .up.|> Struct.Dec.Decorator
  Struct.Dec.DataSourceDecorator o-- Struct.Dec.Decorator : wrappee
  Struct.Dec.EncryptDecorator -up-|> Struct.Dec.DataSourceDecorator
  Struct.Dec.FileDataSource .up.|> Struct.Dec.Decorator

@enduml
